# dup-img-finder

./: .gitignore  Cargo.toml  README.md
src/: args.rs  cache.rs  calc_img_hash.rs  cfg.rs  find_img.rs  fmt_path_for_display.rs  get_img_paths.rs  main.rs  read_cfg.rs  read_file.rs  read_img.rs  read_rc.rs  symlink_dup_files.rs  symlink_err_files.rs
src/infra/: mod.rs  option.rs  result.rs
src/settings/: args.rs  cfg.rs  mod.rs
