[package]
name = "dup-img-finder"
version = "0.1.6"
edition = "2021"
description = "Find duplicate images by similarity"
license = "MIT"
repository = "https://github.com/Thaumy/dup-img-finder"
keywords = ["image"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
anyhow = "1.0.75"
image-compare = "0.3.0"
image = "0.24.7"
image_hasher = "1.2.0"
colored = "2.0.4"
num_cpus = "1.16.0"
crossbeam = "0.8.2"
base64-url = "2.0.0"
clap = { version = "4.4.3", features = ["derive"] }
home = "0.5.5"
toml = "0.8.1"
serde = "1.0.188"
regex = "1.9.5"
terminal_size = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
