[package]
name = "dup-img-finder"
version = "0.1.9"
edition = "2021"
description = "Find duplicate images by similarity"
license = "MIT"
repository = "https://github.com/Thaumy/dup-img-finder"
keywords = ["image"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
anyhow = "1.0.79"
image = "0.24.7"
image_hasher = "1.2.0"
colored = "2.1.0"
num_cpus = "1.16.0"
crossbeam = "0.8.4"
base64-url = "2.0.2"
clap = { version = "4.4.14", features = ["derive"] }
home = "0.5.9"
unicode-width = "0.1.11"
toml = "0.8.8"
serde = "1.0.195"
regex = "1.10.2"
terminal_size = "0.3.0"
sqlite = "0.36.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
