[package]
name = "dup-img-finder"
version = "0.2.0"
edition = "2021"
description = "Find duplicate images by similarity"
license = "MIT"
repository = "https://github.com/Thaumy/dup-img-finder"
keywords = ["image"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
anyhow = "1.0.89"
image = "0.25.2"
image_hasher = "2.0.0"
colored = "2.1.0"
num_cpus = "1.16.0"
crossbeam = "0.8.4"
base64-url = "3.0.0"
clap = { version = "4.5.19", features = ["derive"] }
home = "0.5.9"
unicode-width = "0.2.0"
toml = "0.8.19"
serde = "1.0.210"
regex = "1.11.0"
terminal_size = "0.4.0"
sqlite = "0.36.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
